--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "mpi4py",
 ]
 
+[project.scripts]
+production-manager = "covariance_mocks.cli:main"
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
